Fixing scroll-down button position on small-screen

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -457,10 +457,10 @@ body.news .sticky .menu .news {
 // Scroll down button
 .scroll-down {
   left: 50%;
+  bottom: 0;
   z-index: 1;
   width: 40px;
   height: 50px;
-  bottom: -12px;
   position: absolute;
   background: $brand-main;
   transform-origin: bottom center;
